--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,6 +3,6 @@ FROM mcr.microsoft.com/devcontainers/${IMAGE}
 
 ENV PYTHONUNBUFFERED 1
 
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends postgresql-client \
-     && apt-get clean -y && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive
+    # && apt-get -y install --no-install-recommends postgresql-client \
+    #  && apt-get clean -y && rm -rf /var/lib/apt/lists/*
